# otus_cpp_prof_hw12

./: CMakeLists.txt  README.md  mapper.cpp  reducer_mean.cpp  reducer_variance.cpp  run_locally.sh
.github/workflows/: cmake-multi-platform.yml
